--- a/SimpleWeather/MainPage.xaml
+++ b/SimpleWeather/MainPage.xaml
@@ -297,6 +297,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <Viewbox MaxHeight="150" Grid.Row="0">
@@ -318,6 +319,25 @@
                 </AutoSuggestBox.ItemsPanel>
             </AutoSuggestBox>
         </Grid>
-        <ProgressRing x:Name="LoadingRing" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" Grid.Row="2" Foreground="White"/>
+        <Grid x:Name="APIGrid" Grid.Row="2" Visibility="{Binding ElementName=SearchGrid, Path=Visibility}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <ComboBox x:Name="APIComboBox" HorizontalAlignment="Center" VerticalAlignment="Top" Width="300" Margin="0,10"
+                  Background="White" BorderThickness="0" Grid.Row="0" PlaceholderText="Select WeatherAPI" SelectedIndex="0" DropDownClosed="APIComboBox_DropDownClosed" FontSize="12">
+                <ComboBox.Items>
+                    <TextBlock Text="WeatherUnderground"/>
+                    <TextBlock Text="Yahoo Weather"/>
+                </ComboBox.Items>
+                <ComboBox.Header>
+                    <TextBlock Text="Weather API" Foreground="White" Padding="5,0" FontSize="12" />
+                </ComboBox.Header>
+            </ComboBox>
+            <TextBox x:Name="KeyEntry" HorizontalAlignment="Center" Width="300" Grid.Row="1" FontSize="12"
+                 BorderThickness="0" PlaceholderText="API Key" Padding="10,7" Visibility="Visible"
+                     TextChanged="KeyEntry_TextChanged"/>
+        </Grid>
+        <ProgressRing x:Name="LoadingRing" HorizontalAlignment="Center" VerticalAlignment="Center" Height="50" Width="50" Grid.Row="3" Foreground="White"/>
     </Grid>
 </Page>
