--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_setup"
@@ -10,132 +10,78 @@
     android:focusableInTouchMode="true"
     tools:context="SimpleWeather.Droid.App.SetupActivity">
 
-    <ScrollView
+    <android.support.v7.widget.AppCompatImageView
+        android:id="@+id/main_logo"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/search_bar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_min="100dp"
+        app:layout_constraintHeight_max="150dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/ic_logo" />
 
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin">
+    <include
+        android:id="@+id/search_bar"
+        layout="@layout/location_search_bar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHeight_min="@dimen/searchview_height_region_search"
+        app:layout_constraintHeight_max="@dimen/searchview_height_region_search"
+        app:layout_constraintWidth_max="720dp" />
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/main_logo"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginTop="25dp"
-                app:srcCompat="@drawable/ic_logo" />
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/gps_follow"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/cardview_dark_background"
+        android:drawableLeft="@drawable/ic_my_location_white_24dp"
+        android:drawablePadding="8dp"
+        android:drawableStart="@drawable/ic_my_location_white_24dp"
+        android:paddingLeft="12dp"
+        android:paddingRight="16dp"
+        android:text="@string/label_gpsfollow"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        app:backgroundTint="@color/colorPrimaryLight"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_bar" />
 
-            <include layout="@layout/location_search_bar" />
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/gps_follow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:background="@color/cardview_dark_background"
-                android:drawableLeft="@drawable/ic_my_location_white_24dp"
-                android:drawablePadding="8dp"
-                android:drawableStart="@drawable/ic_my_location_white_24dp"
-                android:paddingLeft="12dp"
-                android:paddingRight="16dp"
-                android:text="@string/label_gpsfollow"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white"
-                app:backgroundTint="@color/colorPrimaryLight" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="@style/Widget.AppCompat.ProgressBar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:indeterminate="true"
-                android:indeterminateTint="@android:color/white"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp"
-                android:visibility="gone"
-                tools:visibility="gone" />
-
-            <View
-                android:id="@+id/search_divider"
-                android:layout_width="match_parent"
-                android:layout_height="25dp"
-                android:background="@color/colorPrimary" />
-
-            <android.support.v7.widget.AppCompatTextView
-                android:id="@+id/provider_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="1"
-                android:padding="8dp"
-                android:text="@string/api_label"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white"
-                android:textSize="12sp" />
-
-            <android.support.v7.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/searchview_height_region_search"
-                app:cardBackgroundColor="@color/cardview_light_background">
-
-                <android.support.v7.widget.AppCompatSpinner
-                    android:id="@+id/api_spinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingBottom="12dp"
-                    android:paddingTop="12dp"
-                    app:backgroundTint="@android:color/darker_gray"
-                    tools:entries="@array/refreshinterval_entries" />
-            </android.support.v7.widget.CardView>
-
-            <View
-                android:id="@+id/key_divider"
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:background="@color/colorPrimary" />
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/key_entry_box"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/searchview_height_region_search"
-                app:cardBackgroundColor="@color/cardview_light_background">
-
-                <EditText
-                    android:id="@+id/key_entry"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@null"
-                    android:hint="@string/key_hint"
-                    android:paddingBottom="12dp"
-                    android:paddingLeft="8dp"
-                    android:paddingStart="8dp"
-                    android:paddingTop="12dp"
-                    android:textSize="16sp"
-                    android:inputType="textVisiblePassword" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/register_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="8dp"
-                android:text="@string/label_apiregister"
-                android:textColor="@android:color/white"
-                android:textSize="12sp" />
-        </LinearLayout>
-    </ScrollView>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:indeterminate="true"
+        android:indeterminateTint="@android:color/white"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/gps_follow"
+        tools:visibility="visible" />
 
     <RelativeLayout
         android:id="@+id/search_fragment_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:clickable="true" />
-</RelativeLayout>
+        android:clickable="true"
+        android:elevation="4dp" />
+
+</android.support.constraint.ConstraintLayout>
