--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -155,6 +155,35 @@
                     </Setter.Value>
                 </Setter>
             </Style>
+            <Style
+                x:Key="NavigatableSectionStyle"
+                BasedOn="{StaticResource SectionLabelStyle}"
+                TargetType="toolkitControls:HeaderedContentControl">
+                <Style.Setters>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="HeaderTemplate">
+                        <Setter.Value>
+                            <DataTemplate>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition />
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Grid.Column="0" Text="{Binding}" />
+                                    <FontIcon
+                                        Grid.Column="1"
+                                        Margin="5,0,0,0"
+                                        HorizontalAlignment="Right"
+                                        VerticalAlignment="Center"
+                                        FontFamily="Segoe MDL2 Assets"
+                                        FontSize="12"
+                                        Glyph="&#xE76C;" />
+                                </Grid>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style.Setters>
+            </Style>
             <toolkitConverters:BoolToObjectConverter
                 x:Key="boolToThemeConverter"
                 FalseValue="Default"
@@ -423,7 +452,7 @@
                             HorizontalContentAlignment="Stretch"
                             VerticalContentAlignment="Stretch"
                             Header="Forecast"
-                            Style="{ThemeResource SectionLabelStyle}">
+                            Style="{ThemeResource NavigatableSectionStyle}">
                             <graphs:RangeBarGraphPanel
                                 x:Name="ForecastGraphPanel"
                                 ForecastData="{x:Bind ForecastView.ForecastGraphData, Mode=OneWay}"
@@ -441,7 +470,7 @@
                             HorizontalContentAlignment="Stretch"
                             VerticalContentAlignment="Stretch"
                             Header="Hourly"
-                            Style="{ThemeResource SectionLabelStyle}">
+                            Style="{ThemeResource NavigatableSectionStyle}">
                             <localcontrols:HourlyForecastItemPanel
                                 x:Name="HourlyForecastControl"
                                 ForecastData="{x:Bind ForecastView.HourlyForecastData, Mode=OneWay}"
@@ -454,15 +483,30 @@
                         x:Load="{x:Bind uwpUtils:FeatureSettings.Charts, Mode=OneWay}"
                         Visibility="{x:Bind ForecastView.PrecipitationGraphData, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}">
                         <Border Style="{ThemeResource Divider}" />
-                        <toolkitControls:HeaderedContentControl>
-                            <toolkitControls:HeaderedContentControl.Header>
-                                <TextBlock
-                                    x:Uid="Label_Precipitation"
-                                    Padding="15,10"
-                                    FontSize="18"
-                                    FontWeight="SemiBold"
-                                    Text="Precipitation" />
-                            </toolkitControls:HeaderedContentControl.Header>
+                        <toolkitControls:HeaderedContentControl Header="Placeholder" Style="{ThemeResource NavigatableSectionStyle}">
+                            <toolkitControls:HeaderedContentControl.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition />
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock
+                                            x:Uid="Label_Precipitation"
+                                            Grid.Column="0"
+                                            Text="Precipitation" />
+                                        <FontIcon
+                                            Grid.Column="1"
+                                            Margin="5,0,0,0"
+                                            HorizontalAlignment="Right"
+                                            VerticalAlignment="Center"
+                                            FontFamily="Segoe MDL2 Assets"
+                                            FontSize="12"
+                                            Glyph="&#xE76C;" />
+                                    </Grid>
+
+                                </DataTemplate>
+                            </toolkitControls:HeaderedContentControl.HeaderTemplate>
                             <graphs:ForecastGraphPanel GraphData="{x:Bind ForecastView.PrecipitationGraphData, Mode=OneWay}" GraphViewTapped="ForecastGraphPanel_GraphViewTapped" />
                         </toolkitControls:HeaderedContentControl>
                     </StackPanel>
@@ -557,7 +601,7 @@
                             HorizontalContentAlignment="Stretch"
                             VerticalContentAlignment="Stretch"
                             Header="Radar"
-                            Style="{ThemeResource SectionLabelStyle}">
+                            Style="{ThemeResource NavigatableSectionStyle}">
                             <Grid>
                                 <Rectangle
                                     Height="360"
